# BWTestTask

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
api/: __init__.py  routes.py  services.py
api/routes/: operations.py  users.py
api/services/: auth.py  operations.py  transactions.py  users.py
migrations/: env.py
migrations/versions/: 033099633030_.py  3fd222fc5124_initial.py  b62091dec47e_create_user_table.py  bda1fce5c8d2_add_money_amount_column_into_operations_.py
models/: __init__.py  orm_models.py  schemes.py
tests/: conftest.py  test_operations.py  test_users.py
