[tool.poetry]
name = "bwtesttask"
version = "0.1.0"
description = ""
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
hypercorn = "^0.14.3"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"
python-dotenv = "^0.21.1"
jose = "^1.0.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
